--- a/kitchicken.html
+++ b/kitchicken.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <script type = "text/javascript" src="kitchicken.js"></script>
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+
+<body onload="msg()">
 
 <h1>My First Heading</h1>
 
