--- a/kitchicken.html
+++ b/kitchicken.html
@@ -12,5 +12,20 @@
 
 <p>My first paragraph.</p>
 
+<div class="flex-container">
+    <section>
+        <div>groceries</div>
+    </section>
+
+    <section>
+        <div> shopping list</div>
+    </section>
+
+    <section>
+        recipes
+    </section>
+
+</div>
+  
 </body>
 </html>
