--- a/kitchicken.html
+++ b/kitchicken.html
@@ -18,16 +18,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="kitchicken.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pantry</a>
+              <a class="nav-link" href="groceries.html">Pantry</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Shopping List</a>
+                <a class="nav-link" href="shoppingList.html">Shopping List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Recipes</a>
+                <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,26 +53,11 @@
 
 <p>My kitchen:</p>
 
-<div class = "btn-group-vertical btn-group-lg">
+<div class = "btn-group-vertical btn-group-lg col-xs-">
   <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='groceries.html';">Pantry</button>
   <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='shoppingList.html';">Shopping List</button>
   <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='recipes.html';">Recipes</button>
 </div>
-<!--
-<div class="flex-container body">
-    <section>
-        <div>groceries</div>
-    </section>
 
-    <section>
-        <div> shopping list</div>
-    </section>
-
-    <section>
-        recipes
-    </section>
-
-</div>
--->
 </body>
 </html>
