--- a/recipes.html
+++ b/recipes.html
@@ -16,16 +16,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="kitchicken.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pantry</a>
+              <a class="nav-link" href="groceries.html">Pantry</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Shopping List</a>
+                <a class="nav-link" href="shoppingList.html">Shopping List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Recipes</a>
+                <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
