--- a/groceries.html
+++ b/groceries.html
@@ -8,7 +8,7 @@
 
 <body onload="msg()">
     <nav class="navbar navbar-expand navbar-light bg-light p-3">
-        <a class="navbar-brand" href="#">KitChicken</a>
+        <a class="navbar-brand" href="kitchicken.html">KitChicken</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
