--- a/kitchicken.html
+++ b/kitchicken.html
@@ -6,9 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
+<div onload="msg()" class="mx-auto" style="width: 500px; height: 700px; background-color: #faf0e6; ">
 
-<body onload="msg()">
-
+  <!-- navbar -->
     <nav class="navbar navbar-expand navbar-light bg-light p-3">
         <a class="navbar-brand" href="kitchicken.html">KitChicken</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,35 +29,22 @@
             <li class="nav-item">
                 <a class="nav-link" href="recipes.html">Recipes</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-
         </ul>
         </div>
       </nav>
+  <!-- end navbar -->
 
-      <div class="mx-auto" style="width: 200px;">
-        Centered element
-      </div>
+  <div class="text-center">
+  <h1>KitChicken</h1>
 
-<h1>KitChicken</h1>
+  <p>My kitchen:</p>
 
-<p>My kitchen:</p>
+    <div class = "btn-group-vertical btn-group-lg col-xs-">
+      <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href='groceries.html';">Pantry</button>
+      <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href='shoppingList.html';">Shopping List</button>
+      <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href='recipes.html';">Recipes</button>
+    </div>
+  </div>
 
-<div class = "btn-group-vertical btn-group-lg col-xs-">
-  <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='groceries.html';">Pantry</button>
-  <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='shoppingList.html';">Shopping List</button>
-  <button type="button" class="btn btn-primary btn-lg" onclick="window.location.href='recipes.html';">Recipes</button>
 </div>
-
-</body>
 </html>
