--- a/chickenparm.html
+++ b/chickenparm.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<div onload="msg()" class="mx-auto" style="width: 500px; height: 950px; background-color: #faf0e6; ">
+<div onload="msg()" class="mx-auto ml-1" style="width: 768px; height: 1280px; background-color: #faf0e6; ">
 
   <!-- navbar -->
     <nav class="navbar navbar-expand navbar-light bg-light p-3">
@@ -37,8 +37,8 @@
           <h1>Chicken Parmesan</h1>
           <h5>Prep Time: 15 min | Cook Time: 30 min | Servings: 4</h5>
 
-          <div>
-            <div style="float: left">
+          <div class="ml-1">
+            <div style="float: left" class=" ml-4">
             <img src="chickenparm.jpeg"width="200" 
             height="270" />
             </div>
