fix homepage on back folder

--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<div onload="msg()" class="mx-auto" style="width: 768px; height: 1280px; background-color: #faf0e6; ">
+<div onload="msg()" class="mx-auto" style="width: 768px; height: 1280px; background: #0277bd ">
 
 
   <div class="text-center">
