--- a/KitChicken-back/kitchicken.html
+++ b/KitChicken-back/kitchicken.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
-<html style="background-color: #faf0e6; ">
+<html>
+
 <head>
-    <script type = "text/javascript" src="kitchicken.js"></script>
-    <script src="js/jquery.js"></script>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script type="text/javascript" src="kitchicken.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<div class="mx-auto" style=" background-color: #faf0e6; ">
+<div onload="msg()" class="mx-auto" style="width: 768px; height: 1280px; background-color: #faf0e6; ">
 
   <!-- navbar -->
-    <nav class="navbar navbar-expand navbar-light bg-light p-3" style="height: 200px;">
-        <a class="navbar-brand" href="kitchicken.html" style="font-size: 40px;" >KitChicken</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="kitchicken.html" style="font-size: 45px;">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="groceries.html" style="font-size: 45px;">Pantry/Shopping-List</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="recipes.html" style="font-size: 45px;">Recipes</a>
-            </li>
-        </ul>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand navbar-light bg-light p-3">
+    <a class="navbar-brand" href="kitchicken.html">KitChicken</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="kitchicken.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="groceries.html">Pantry</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="shoppingList.html">Shopping List</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="recipes.html">Recipes</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
   <!-- end navbar -->
 
   <div class="text-center">
-  <h1 style="font-size: 180px;">KitChicken</h1>
+    <h1>KitChicken</h1>
 
-  <p style="font-size: 100px; color: navy;" >My kitchen:</p>
+    <p>What's in my kitchen?</p>
 
-    <div class = "btn-group-vertical btn-group-lg">
-      <button type="button" class="btn btn-outline-primary btn-lg" style="height: 200px; width: 600px; font-size: 60px;" onclick="window.location.href='groceries.html';">Pantry/Shopping List</button>
-      <button type="button" class="btn btn-outline-primary btn-lg" style="height: 200px; width: 600px; font-size: 60px;" onclick="window.location.href='recipes.html';">Recipes</button>
-    </div>
+    <button type="button" class="btn btn-outline-primary btn-lg btn-block"
+      onclick="window.location.href='groceries.html';">Pantry</button>
+    <hr>
+    <p>What's on my Shopping list?</p>
+    <button type="button" class="btn btn-outline-primary btn-lg"
+      onclick="window.location.href='shoppingList.html';">Shopping List</button>
+    <p></p>
+    <hr>
+    <p>What should I make for dinner?</p>
+    <button type="button" class="btn btn-outline-primary btn-lg"
+      onclick="window.location.href='recipes.html';">Recipes</button>
   </div>
 
 </div>
-</html>
