--- a/KitChicken-back/kitchicken.html
+++ b/KitChicken-back/kitchicken.html
@@ -24,10 +24,7 @@
           <a class="nav-link" href="kitchicken.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="groceries.html">Pantry</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="shoppingList.html">Shopping List</a>
+          <a class="nav-link" href="groceries.html">Groceries</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="recipes.html">Recipes</a>
@@ -40,17 +37,12 @@
   <div class="text-center">
     <h1>KitChicken</h1>
 
-    <p>What's in my kitchen?</p>
-
-    <button type="button" class="btn btn-outline-primary btn-lg btn-block"
-      onclick="window.location.href='groceries.html';">Pantry</button>
-    <hr>
-    <p>What's on my Shopping list?</p>
+    <p>Food Tracker</p>
     <button type="button" class="btn btn-outline-primary btn-lg"
-      onclick="window.location.href='shoppingList.html';">Shopping List</button>
+      onclick="window.location.href='groceries.html';">Groceries</button>
     <p></p>
     <hr>
-    <p>What should I make for dinner?</p>
+    <p>What's for Dinner?</p>
     <button type="button" class="btn btn-outline-primary btn-lg"
       onclick="window.location.href='recipes.html';">Recipes</button>
   </div>
