--- a/KitChicken-back/recipes.html
+++ b/KitChicken-back/recipes.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="kitchicken.html" style="font-size: 34px;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="groceries.html" style="font-size: 34px;">Pantry/Shopping-List</a>
+          <a class="nav-link" href="groceries.html" style="font-size: 34px;">Groceries</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="recipes.html" style="font-size: 34px;">Recipes</a>
@@ -35,7 +35,7 @@
     </ul>
     </div>
   </nav>
-  <body>
+  <div onload="msg()" class="mx-auto" style="width: 768px; height: 1280px; background-color: #faf0e6; ">
     <div class="text-center">
 
       <h1>Suggested Recipes Based on Your Pantry:</h1>
@@ -59,6 +59,6 @@
         <button class="btn btn-outline-primary btn-lg" onclick="window.location.href='noRecipesMatch.html'"> 30 min or less</button>
         <button class="btn btn-outline-primary btn-lg" onclick="window.location.href='recipesHour.html'"> 1 hr or less</button>
       </div>
-  </body>
+    </div>
   </div>
   </html>
