--- a/KitChicken-back/shoppingList.html
+++ b/KitChicken-back/shoppingList.html
@@ -20,10 +20,7 @@
               <a class="nav-link" href="kitchicken.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="groceries.html">Pantry</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="shoppingList.html">Shopping List</a>
+              <a class="nav-link" href="groceries.html">Groceries</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="recipes.html">Recipes</a>
