--- a/KitChicken-back/mushroomravioli.html
+++ b/KitChicken-back/mushroomravioli.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="kitchicken.html" style="font-size: 34px;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="groceries.html" style="font-size: 34px;">Pantry/Shopping-List</a>
+          <a class="nav-link" href="groceries.html" style="font-size: 34px;">Groceries</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="recipes.html" style="font-size: 34px;">Recipes</a>
