--- a/KitChicken-back/kitchicken.html
+++ b/KitChicken-back/kitchicken.html
@@ -1,50 +1,53 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en" style="background-color: #faf0e6; ">
 
 <head>
-  <script type="text/javascript" src="kitchicken.js"></script>
+  <script src="keyboard.js"></script>
+  <script src="js/jquery.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Pantry/Shopping List</title>
+
   <link rel="stylesheet" href="styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
-<div onload="msg()" class="mx-auto" style="width: 768px; height: 1280px; background-color: #faf0e6; ">
-
-  <!-- navbar -->
-  <nav class="navbar navbar-expand navbar-light bg-light p-3">
-    <a class="navbar-brand" href="kitchicken.html">KitChicken</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<div class="mx-auto" style="background-color: #faf0e6; ">
+  <nav class="navbar navbar-expand navbar-light bg-light p-3" style="height: 160px;">
+    <a class="navbar-brand" href="kitchicken.html" style="font-size: 30px;">KitChicken</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="kitchicken.html">Home</a>
+          <a class="nav-link" href="kitchicken.html" style="font-size: 34px;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="groceries.html">Groceries</a>
+          <a class="nav-link" href="groceries.html" style="font-size: 34px;">Groceries</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="recipes.html">Recipes</a>
+            <a class="nav-link" href="recipes.html" style="font-size: 34px;">Recipes</a>
         </li>
-      </ul>
+
+    </ul>
     </div>
   </nav>
-  <!-- end navbar -->
 
   <div class="text-center">
-    <h1>KitChicken</h1>
+    <h1 style="font-size: 70px;">KitChicken</h1>
 
-    <p>Food Tracker</p>
-    <button type="button" class="btn btn-outline-primary btn-lg"
+    <h2 style="font-size: 45px;">Food Tracker</h2>
+    <button type="button" style="height: 100px; width: 600px; font-size: 60px;" class="btn btn-outline-primary btn-lg"
       onclick="window.location.href='groceries.html';">Groceries</button>
     <p></p>
     <hr>
-    <p>What's for Dinner?</p>
-    <button type="button" class="btn btn-outline-primary btn-lg"
+    <h2 style="font-size: 45px;">What's for Dinner?</h2>
+    <button type="button" style="height: 100px; width: 600px; font-size: 60px;" class="btn btn-outline-primary btn-lg"
       onclick="window.location.href='recipes.html';">Recipes</button>
   </div>
 
 </div>
+</html>
