--- a/KitChicken-back/recipesVegetarian.html
+++ b/KitChicken-back/recipesVegetarian.html
@@ -38,7 +38,7 @@
   <body>
     <div class="text-center">
 
-      <h1>Suggested Recipes Based on Your Pantry:</h1>
+      <h1 style="font-size: 70px;">Recipes</h1>
       
       <div class="text-center">
           
