--- a/KitChicken-back/noRecipesMatch.html
+++ b/KitChicken-back/noRecipesMatch.html
@@ -35,7 +35,7 @@
     </ul>
     </div>
   </nav>
-  <h1>Sorry! No suggested recipes match this filter.</h1>
+  <h1>Sorry! No recipes match this filter.</h1>
   <br></br>
   <h2>Filter By:</h2>
   <div id="myBtnContainer">
@@ -48,3 +48,4 @@
       </div>
 </div>
 </html>
+
